# ci

./: Dockerfile
.github/workflows/: build.yml
stuff/: build.sh  coq-binaries.opam
